--- a/templates/Vagrantfile.erb
+++ b/templates/Vagrantfile.erb
@@ -12,8 +12,11 @@ Vagrant.configure("2") do |config|
 
   # Every Vagrant development environment requires a box. You can search for
   # boxes at https://vagrantcloud.com/search.
-  config.vm.box = "ubuntu/focal64"
-  config.vm.hostname = "ubuntu"
+  # config.vm.box = "ubuntu/focal64"
+  # config.vm.hostname = "ubuntu"
+  config.vm.box = "bento/debian-11.4"
+  # config.vm.box_version = "202207.19.0"
+  config.vm.hostname = "debian"
   
   # Docker provider setup
   config.vm.provider :docker do |docker, override|
